Рефакторинг структуры модуля

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Базовые структуры данных",
   "main": "",
   "directories": {
-    "example": "examples",
-    "test": "tests"
+    "example": "examples"
   },
   "scripts": {
     "build": "tsc",
